--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.8",
-    "express": "^4.14.0"
+    "bootstrap": "^3.3.7",
+    "express": "^4.14.0",
+    "pg": "^6.1.0"
   }
 }
